--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "allowedCommonJsDependencies": [
+              "tumblr.js"
+           ],
             "scripts": []
           },
           "configurations": {
