--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/three": "^0.152.0",
+    "three": "^0.152.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
